# proc_hydrophone

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  package.xml
.devcontainer/: devcontainer.json
.github/workflows/: docker-image-perception-develop.yml  docker-image-perception-feature.yml  docker-image-perception-fix.yml  docker-image-perception-master.yml
config/: compe2022.yaml  rosconsole.config
launch/: proc_hydrophone.launch
src/: Configuration.cc  Configuration.h  PingHandler.cc  PingHandler.h  main.cc  proc_hydrophone_node.cc  proc_hydrophone_node.h
src/algorithm/: DOAAlgorithm.cc  DOAAlgorithm.h  algoClass.cpp  algoClass.h  computeHyperPlans_data.cpp  computeHyperPlans_data.h  computeHyperPlans_types.h  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h
src/filter_strategy/: AmplitudeFilter.cc  AmplitudeFilter.h  CompositeFilter.cc  CompositeFilter.h  ElevationNaNFilter.cc  ElevationNaNFilter.h  IFilterStrategy.h  KeepFirstPingFilter.h  LimitationStrategy.cc  LimitationStrategy.h  NegativeZFilter.cc  NegativeZFilter.h  RatioAmpNoiseFilter.h  SNRFilter.cc  SNRFilter.h  VectorNormFilter.cc  VectorNormFilter.h  phaseDiff.cc  phaseDiff.h
src/filter_strategy_angles/: elevationCheck.cc  elevationCheck.h  frontOnly.cc  frontOnly.h
src/ping_merge_strategy/: IPingMergeStrategy.h  MeanMergeStrategy.h
src/proc_hydrophone/: Configuration.cc  Configuration.h  PingHandler.cc  PingHandler.h  main.cc  proc_hydrophone_node.cc  proc_hydrophone_node.h
(+18 files in other folders)
