<?xml version="1.0"?>
<package>
  <name>proc_hydrophone</name>
  <version>2.1.0</version>
  <description>
    The proc_hydrophone is responsible process data received from provider_hydrophone.
  </description>

  <author>Marc-Antoine Couture</author>

  <maintainer email="francisalonzo29@gmail.com">Francis Alonzo</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sonia_common</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sonia_common</run_depend>
</package>
